// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle removeExpense 1`] = `
<div>
  <div
    className="page-header"
  >
    <div
      className="content-container"
    >
      <h1
        className="page-header__title"
      >
        Edit Expense
      </h1>
    </div>
  </div>
  <div
    className="content-container"
  >
    <ExpenseForm
      expense={
        Object {
          "amount": 4500,
          "createdAt": 345600000,
          "description": "Credit Card",
          "id": "3",
          "note": "",
        }
      }
      onSubmit={[Function]}
    />
    <button
      className="button button--secondary "
    >
      Remove Expense
    </button>
  </div>
  <ConfirmModal
    handleConfirmModal={[Function]}
    title="You want to remove this expense?"
  />
</div>
`;

exports[`should render EditExpensePage correctly 1`] = `
<div>
  <div
    className="page-header"
  >
    <div
      className="content-container"
    >
      <FormattedMessage
        defaultMessage="Edit Expense"
        id="expense-edit"
        values={Object {}}
      />
    </div>
  </div>
  <div
    className="content-container"
  >
    <ExpenseForm
      expense={
        Object {
          "amount": 4500,
          "createdAt": 345600000,
          "description": "Credit Card",
          "id": "3",
          "note": "",
        }
      }
      onSubmit={[Function]}
    />
    <FormattedMessage
      defaultMessage="Remove Expense"
      id="expense-remove.button"
      values={Object {}}
    />
  </div>
  <ConfirmModal
    handleConfirmModal={[Function]}
    title="You want to remove this expense?"
  />
</div>
`;
